Fixed a missing border-radius

--- a/styles.css
+++ b/styles.css
@@ -392,6 +392,7 @@ h6 {
     margin: 0 24px 24px 24px;
     display: flex;
     align-items: center;
+    border-radius: 8px;
 }
 
 .info-box-mobile {
